test/fail/invalidindex2.min
program
    array x[2] := 1, 2;
    string y
start
    y := 0;
    x[y] := 3;
end
